2.0.3 (29.03.2018):

* Always update image viewer if page selection changes
  Closes Debian bug #893026 (Preview pane does not update)
* Fixed manually typing date in metadata dialog (again)
  Closes Debian bug #893024 (Manual entry into UI date widget is broken)
* If image is zoomed to fit viewer, update zoom when the size of the viewer
  changes


2.0.2 (26.03.2018):

* Clear view if no page selected
* Change boolean scan options to use switch instead of checkbox widget
* Fixed manually typing date in metadata dialog. Closes Debian bug #893024
  (Manual entry into UI date widget is broken)
* Take colours for image viewer from theme. Closes Debian bug #893025
  (White UI background makes page borders disappear)
* Support Glib::Object::Introspection < 0.043


2.0.1 (12.03.2018):

* Fixed editing OCR output
* Fixed displaying image after undoing
* Fixed displaying image after deleting page
* Fixed text in progress bars
* Fixed warning message clearing all pages if no scanner detected


2.0.0 (08.03.2018):

* Switch from gtk+-2 to gtk+-3, requiring the reimplementation of GtkImageview
  in pure Perl, as C library not compatible with gtk+-3.
* Fixed ghosting if flatbed only source option but not set.
  Closes #290 (Page Options -> Pages: scanning only first page of n)
* Fixed setting preferences if frontend not set to libsane-image-perl and no
  scanner available. Closes #291 (Cannot change temporary directory)


1.8.11 (26.01.2018):

* + preference "Force new scan job between pages"
* support applying profiles resulting in multiple reloads, to prevent profile
  dropdown from being cleared after setting profile.
  Closes #276 (Scan profile stays blank)
* Update to Czech translation (thanks to Pavel Borecki)


1.8.10 (27.11.2017):

* + support for scan options without ranges, e.g. booleans, in tolerance check
  introduced in v1.8.9


1.8.9 (24.11.2017):

* Rename preference "Open scan dialog at program start"
  -> "Open scanner at program start"