@@ -6,6 +6,7 @@
   Closes Debian bug #893024 (Manual entry into UI date widget is broken)
 * If image is zoomed to fit viewer, update zoom when the size of the viewer
   changes
+* Update cursor depending on selected tool and position
 
 
 2.0.2 (26.03.2018):
